[package]
name = "psilo-text"
version = "0.1.0"
edition = "2021"
authors = ["Solra Bizna <solra@bizna.name>"]
description = "Runtime crate that renders glyphs to multichannel signed distance fields and packs those MSDFs into atlases, suitable for subsequent very fast display"
readme = "README.md"
license = "MIT OR APACHE-2.0"
keywords = ["gamedev", "text-rendering", "msdf"]
categories = ["graphics", "rendering", "rendering::data-formats"]

[dependencies]
ttf-parser = "0.19.1"
fdsm = {version = "0.1.1", features=["ttf-parser"]}
image = {version = "0.24.7", default-features=true}
log = "0.4"
libc = "0.2.116"
nalgebra = "0.32.3"
rect_packer = "0.2.1"
rustybuzz = "0.8.0"

[features]
default = ["bg-render"]
bg-render = []
